Adição de novo caso de uso 'listSpecifications'
